--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,10 @@ certifi==2022.6.15
 charset-normalizer==2.1.0
 coreapi==2.3.3
 coreschema==0.0.4
+dj-database-url==1.0.0
 Django==4.1
 django-cors-headers==3.13.0
+django-heroku==0.3.1
 djangorestframework==3.13.1
 djangorestframework-simplejwt==5.2.0
 drf-yasg==1.21.3
@@ -15,6 +17,8 @@ itypes==1.2.0
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 packaging==21.3
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycodestyle==2.9.1
 PyJWT==2.4.0
 pyparsing==3.0.9
@@ -26,3 +30,4 @@ sqlparse==0.4.2
 toml==0.10.2
 uritemplate==4.1.1
 urllib3==1.26.11
+whitenoise==6.2.0
